objects/AvalaraInfo__c.object
<CustomObject><fields>
        <fullName>accountnumber__c</fullName>
        <label>accountnumber</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>dev_company_code__c</fullName>
        <label>dev_company_code</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>dev_endpoint__c</fullName>
        <label>dev_endpoint</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>password__c</fullName>
        <label>password</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>prod_company_code__c</fullName>
        <label>prod_company_code</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>prod_endpoint__c</fullName>
        <label>prod_endpoint</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>username__c</fullName>
        <label>username</label>
        <length>100</length>
        <type>Text</type>
    </fields><customSettingsType>List</customSettingsType><enableFeeds>false</enableFeeds><label>AvalaraInfo</label><visibility>Public</visibility></CustomObject>